@@ -1,5 +1,11 @@
 2005-08-17 Pierrick LE GALL
 
+	* improvement : in admin/user_perm, already authorized categories
+	thanks to group associations are displayed and not taken into
+	account for user specific permissions.
+
+2005-08-17 Pierrick LE GALL
+
 	* modification : major simplification of admin.php. Titles are
 	managed by included page, localized items are managed directly in
 	the template.
